<?xml version="1.0"?>
<package>
  <name>cwru_pcl_utils</name>
  <version>0.0.1</version>
  <description>Useful PCL utility functions</description>

  <maintainer email="wsn@case.edu">Wyatt Newman</maintainer>
  <maintainer email="bettaieb@case.edu">Luc Bettaieb</maintainer>

  <author email="wsn@case.edu">Wyatt Newman</author>
  <license>LGPL</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cwru_srv</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cwru_srv</run_depend>
  
</package>
